fix: add responsiveness on smaller viewports

--- a/src/components/PostsGallery/PostsGallery.module.scss
+++ b/src/components/PostsGallery/PostsGallery.module.scss
@@ -1,6 +1,6 @@
 .postsGalleryContainer {
   width: 100%;
-  height: 33vw;
+  min-height: 33vw;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -12,6 +12,12 @@
   justify-content: flex-start;
   gap: 3.5vw;
   padding: 1rem 5vw;
+
+  @media (max-width: 1000px) {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 .postsGalleryPagination {
