--- a/src/components/PostsGallery/PostsGalleryItem/PostsGalleryItem.module.scss
+++ b/src/components/PostsGallery/PostsGalleryItem/PostsGalleryItem.module.scss
@@ -4,10 +4,17 @@
   border-bottom: 3px solid var(--grey);
   cursor: pointer;
   transition: all 0.1s ease-in-out;
-  width: 33%;
-  height: 26vw;
+  max-width: 45rem;
+  min-height: 26vw;
+  flex-grow: 1;
+  flex-basis: 0;
+
   &:hover {
     transform: translateY(-1px);
+  }
+
+  @media (max-width: 1000px) {
+    flex-basis: auto;
   }
 }
 
